add angular2 front-end project砰砰博士

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@
 ./RemoteSystemsTempFiles
 
 */.settings/
+
+
+#ignore build folder
+**/build/
+
+#ignore js dependencies
+*/node_modules/
+*/bower_components/
+
+#ignore compiled js
+**/app/*.js
+**/app/*.js.map
